# browsecomp-plus-dummy-purple

./: Dockerfile  README.md  amber-manifest.json5  entrypoint.sh  pyproject.toml
src/: agent.py  executor.py  server.py
